# shelle

./: Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: release.yaml  test.yaml
crates/lib/: Cargo.toml
crates/lib/src/: errors.rs  lib.rs
crates/shelle/: Cargo.toml
crates/shelle-macros/: Cargo.toml
crates/shelle-macros/src/: lexer.rs  lib.rs  parser.rs
crates/shelle/src/: arg.rs  cmd.rs  cmdline.rs  lib.rs  redirects.rs  script.rs
examples/: Cargo.toml  ls.rs
