[workspace]
members = ["crates/*", "examples"]
resolver = "3"

[workspace.package]
authors = ["Jack Foltz <jack@foltz.io>"]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/foltik/shelle"
readme = "README.md"
keywords = ["shell", "script", "process", "pipe"]
categories = ["command-line-interface", "os", "development-tools"]


[workspace.dependencies]
anyhow = "1"
thiserror = "2"
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
proc-macro-error2 = "2"
