[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
authors = ["Jack Foltz <jack@foltz.io>"]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/foltik/rust-workspace"
readme = "README.md"
keywords = []
categories = []


[workspace.dependencies]
rust-workspace-lib = { path = "./crates/lib", version = "0.1.0" }
rust-workspace-bin = { path = "./crates/bin", version = "0.1.0" }

argh = "0.1"
anyhow = "1"
thiserror = "2"
log = "0.4"
env_logger = { version = "0.11", default-features = false, features = ["auto-color"] }
