[package]
name = "rust-workspace-lib"
description = ""
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true


[dependencies]
thiserror.workspace = true
log.workspace = true


[lints.clippy]
expect_used = "warn"
indexing_slicing = "warn"
ok_expect = "warn"
panic = "warn"
undocumented_unsafe_blocks = "warn"
unreachable = "warn"
unwrap_in_result = "warn"
unwrap_used = "warn"
