[package]
name = "shelle-macros"
description = "Proc macros for shelle"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
proc-macro = true


[dependencies]
syn.workspace = true
quote.workspace = true
proc-macro2.workspace = true
proc-macro-error2.workspace = true
