[package]
name = "shelle"
description = "Macros for writing shell scripts in Rust."
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true


[dependencies]
shelle-macros = { version = "0.1.0", path = "../shelle-macros" }
thiserror.workspace = true


[lints.clippy]
expect_used = "warn"
indexing_slicing = "warn"
ok_expect = "warn"
panic = "warn"
undocumented_unsafe_blocks = "warn"
unreachable = "warn"
unwrap_in_result = "warn"
unwrap_used = "warn"
